refactor(web-components): :recycle: get styles to be bundled

--- a/packages/web-components/index.html
+++ b/packages/web-components/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Lit + TS</title>
     <link rel="stylesheet" href="./src/globals/index.css" />
+    <script type="module" src="./src/index.ts"></script>
   </head>
   <body>
     <my-button name="Lloyd"></my-button>
-    <script type="module" src="/src/my-button/my-button.ts"></script>
   </body>
 </html>
