feat(web-components): :sparkles: add bar chart

--- a/apps/vanilla/index.html
+++ b/apps/vanilla/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <p>DataTable</p>
+    <data-table> </data-table>
+    <bar-chart></bar-chart>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
