--- a/packages/sszvis-wc/src/index.html
+++ b/packages/sszvis-wc/src/index.html
@@ -9,14 +9,18 @@
     <script type="module" src="/lib/main.ts"></script>
   </head>
   <body>
-    <style>
-      :root {
-        --destructive: 6 93% 71%;
-        --destructive-foreground: 0 0 0%;
-      }
-    </style>
-    <my-element variant="destructive" size="lg">
-      <h1>Vite + Lit</h1>
-    </my-element>
+    <basic-line-chart
+      dataSrc="./data/BEV327V3270.csv"
+      title="Bevölkerungsentwicklung"
+      description=""
+      xCol="Jahr"
+      yCol="Anzahl"
+      cCol="Bevoelkerungsdefinition"
+      yLabel="Anzahl (Personen)"
+      xLabel="Jahr (Zeit)"
+      ticks="5"
+      padding='{"top":8,"right":8,"bottom":24,"left":86}'
+    ></basic-line-chart>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
