--- a/packages/sszvis-wc/src/index.html
+++ b/packages/sszvis-wc/src/index.html
@@ -21,6 +21,18 @@
       ticks="5"
       padding='{"top":8,"right":8,"bottom":24,"left":86}'
     ></basic-line-chart>
+    <sszvis-line-chart
+      dataSrc="./data/BEV327V3270.csv"
+      title="Bevölkerungsentwicklung"
+      description=""
+      xCol="Jahr"
+      yCol="Anzahl"
+      cCol="Bevoelkerungsdefinition"
+      yLabel="Anzahl (Personen)"
+      xLabel="Jahr (Zeit)"
+      ticks="5"
+      padding='{"top":8,"right":8,"bottom":24,"left":86}'
+    ></sszvis-line-chart>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
