--- a/packages/sszvis-wc/src/index.html
+++ b/packages/sszvis-wc/src/index.html
@@ -9,6 +9,7 @@
     <script type="module" src="/lib/main.ts"></script>
   </head>
   <body>
+    <h1>basic line chart</h1>
     <basic-line-chart
       dataSrc="./data/BEV327V3270.csv"
       title="Bevölkerungsentwicklung"
@@ -21,6 +22,7 @@
       ticks="5"
       padding='{"top":8,"right":8,"bottom":24,"left":86}'
     ></basic-line-chart>
+    <h1>sszvis line chart</h1>
     <sszvis-line-chart
       dataSrc="./data/BEV327V3270.csv"
       title="Bevölkerungsentwicklung"
@@ -31,7 +33,17 @@
       yLabel="Anzahl (Personen)"
       xLabel="Jahr (Zeit)"
       ticks="5"
-      padding='{"top":8,"right":8,"bottom":24,"left":86}'
+    ></sszvis-line-chart>
+    <h1>sszvis line chart Version 2</h1>
+    <sszvis-line-chart
+      dataSrc="./data/BEV327V3270.csv"
+      title="Bevölkerungsentwicklung"
+      description=""
+      xCol="Jahr"
+      yCol="Anzahl"
+      cCol="Bevoelkerungsdefinition"
+      yLabel="Anzahl (Personen)"
+      xLabel="Jahr (Zeit)"
     ></sszvis-line-chart>
     <script type="module" src="/src/main.ts"></script>
   </body>
