doc: add new dataset

--- a/apps/vanilla/index.html
+++ b/apps/vanilla/index.html
@@ -29,5 +29,16 @@
       yLabel="Anzahl (Personen)"
       ticks="5"
     ></sszvis-line-chart>
+    <h1>POL700V700C</h1>
+    <sszvis-line-chart
+      dataSrc="./src/data/POL700V700C.csv"
+      title="Bevölkerungsentwicklung"
+      description=""
+      xCol="Jahr"
+      yCol="Anteil"
+      cCol="Partei"
+      yLabel="Anzahl (Personen)"
+      ticks="5"
+    ></sszvis-line-chart>
   </body>
 </html>
