--- a/packages/sszvis-wc/src/index.html
+++ b/packages/sszvis-wc/src/index.html
@@ -9,37 +9,27 @@
     <script type="module" src="/lib/main.ts"></script>
   </head>
   <body>
-    <!-- add an accordion -->
-    <details>
-      <summary>basic line chart</summary>
-      <basic-line-chart
-        dataSrc="./data/BEV327V3270.csv"
-        title="Bevölkerungsentwicklung"
-        description=""
-        xCol="Jahr"
-        yCol="Anzahl"
-        cCol="Bevoelkerungsdefinition"
-        yLabel="Anzahl (Personen)"
-        xLabel="Jahr (Zeit)"
-        ticks="5"
-        padding='{"top":8,"right":8,"bottom":24,"left":86}'
-      ></basic-line-chart>
-    </details>
-    <details>
-      <summary>sszvis line chart</summary>
-      <sszvis-line-chart
-        dataSrc="./data/BEV327V3270.csv"
-        title="Bevölkerungsentwicklung"
-        description=""
-        xCol="Jahr"
-        yCol="Anzahl"
-        cCol="Bevoelkerungsdefinition"
-        yLabel="Anzahl (Personen)"
-        xLabel="Jahr (Zeit)"
-        ticks="5"
-      ></sszvis-line-chart>
-    </details>
     <details open>
+      <summary>Version 3</summary>
+      <ssz-data-loader
+        dataSrc="./data/BEV327V3270.csv"
+        xCol="Jahr"
+        yCol="Anzahl"
+        cCol="Bevoelkerungsdefinition"
+      >
+        <ssz-chart slot="chart" title="Bevölkerungsentwicklung" description="">
+          <geom-layer></geom-layer>
+          <act-layer>
+            <aes-layer
+              yLabel="Anzahl (Personen)"
+              xLabel="Jahr (Zeit)"
+            ></aes-layer>
+            <geom-annotation></geom-annotation>
+          </act-layer>
+        </ssz-chart>
+      </ssz-data-loader>
+    </details>
+    <details>
       <summary>Version 2</summary>
       <sszvis-data-loader
         dataSrc="./data/BEV327V3270.csv"
@@ -57,6 +47,33 @@
         <sszvis-legend slot="legend"></sszvis-legend>
       </sszvis-data-loader>
     </details>
+    <details>
+      <summary>sszvis line chart</summary>
+      <sszvis-line-chart
+        dataSrc="./data/BEV327V3270.csv"
+        title="Bevölkerungsentwicklung"
+        description=""
+        xCol="Jahr"
+        yCol="Anzahl"
+        cCol="Bevoelkerungsdefinition"
+        yLabel="Anzahl (Personen)"
+        xLabel="Jahr (Zeit)"
+        ticks="5"
+      ></sszvis-line-chart>
+    </details>
+    <h2>basic line chart</h2>
+    <basic-line-chart
+      dataSrc="./data/BEV327V3270.csv"
+      title="Bevölkerungsentwicklung"
+      description=""
+      xCol="Jahr"
+      yCol="Anzahl"
+      cCol="Bevoelkerungsdefinition"
+      yLabel="Anzahl (Personen)"
+      xLabel="Jahr (Zeit)"
+      ticks="5"
+      padding='{"top":8,"right":8,"bottom":24,"left":86}'
+    ></basic-line-chart>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
