--- a/packages/sszvis-wc/src/index.html
+++ b/packages/sszvis-wc/src/index.html
@@ -12,19 +12,20 @@
     <details open>
       <summary>Version 3</summary>
       <ssz-data-loader
-        dataSrc="./data/BEV327V3270.csv"
+        dataSrc="./data/POL700V700C.csv"
         xCol="Jahr"
-        yCol="Anzahl"
-        cCol="Bevoelkerungsdefinition"
+        yCol="Anteil"
+        cCol="Partei"
       >
-        <ssz-chart slot="chart" title="Bevölkerungsentwicklung" description="">
-          <geom-layer></geom-layer>
+        <ssz-chart slot="chart">
+          <dot-geom radius="2.5"></dot-geom>
           <act-layer>
-            <aes-layer
-              yLabel="Anzahl (Personen)"
-              xLabel="Jahr (Zeit)"
-            ></aes-layer>
             <geom-annotation></geom-annotation>
+            <ssz-x-axis orientation="bottom" label="Jahr (Zeit)"></ssz-x-axis>
+            <ssz-y-axis
+              orientation="right"
+              label="Anzahl (Personen)"
+            ></ssz-y-axis>
           </act-layer>
         </ssz-chart>
       </ssz-data-loader>
